# olha

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  config.example.toml
.claude/: settings.local.json
docs/: plan.md
olha/: Cargo.toml
olha-popup/: Cargo.toml
olha-popup/src/: config.rs  dbus.rs  main.rs  model.rs  rules.rs
olha/src/: client.rs  encryption.rs  main.rs  output.rs
olhad/: Cargo.toml
olhad/src/: config.rs  config.template.toml  launcher.rs  main.rs  notification.rs  rules.rs
olhad/src/db/: encryption.rs  mod.rs  queries.rs  schema.rs
olhad/src/dbus/: freedesktop.rs  mod.rs  olha.rs
