[workspace]
resolver = "2"
members = ["olhad", "olha"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Travis"]
description = "A minimalist notification center with persistent history"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zbus = "5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
thiserror = "2"
regex = "1"
