[package]
name = "olha"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "olha CLI client — query, filter, and manage notifications"

[[bin]]
name = "olha"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }
futures-util = "0.3"
