[package]
name = "olha"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "olha CLI client — query, filter, and manage notifications"

[[bin]]
name = "olha"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive", "env", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
comfy-table = "7"
owo-colors = { version = "4", features = ["supports-colors"] }
futures-util = "0.3"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
toml = "0.8"
toml_edit = "0.22"
chacha20poly1305 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
