[package]
name = "olhad"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "olha notification daemon — receives and persists desktop notifications"

[[bin]]
name = "olhad"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
toml = "0.8"
shellexpand = "3"
clap = { version = "4", features = ["derive"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
